@@ -1,12 +1,12 @@
 [kdcdefaults]
- acl_file = @TESTDIR@/config/kadm5.acl
- admin_keytab = @TESTDIR@/kdc/kadm5.keytab
  v4_mode = nopreauth
  kdc_ports = 8800
- dict_file = /usr/share/dict/words
 
 [realms]
  EXAMPLE.COM = {
+  acl_file = @TESTDIR@/config/kadm5.acl
+  admin_keytab = @TESTDIR@/kdc/kadm5.keytab
+  dict_file = /usr/share/dict/words
   database_name = @TESTDIR@/kdc/principal
   key_stash_file = @TESTDIR@/kdc/stash_file
   master_key_type = des-cbc-crc
